# Clove

./: .gitignore  CMakeLists.txt  Dockerfile  MANUAL_TEST_SUITE.md  PITCH.md  PLAN_KERNEL_EXTENSIONS.md  README.md  REFACTOR_PLAN.md  STATUS.md  STRATEGY.md  SYSTEM_DESIGN.md  TALKING_POINTS.md
agents/adapters/: README.md
agents/dataLogs/: README.md
agents/python_sdk/: README.md  agentic.py  agentos.py  clove.py  fleet_client.py  pyproject.toml  remote_client.py  setup.cfg
agents/python_sdk/clove_sdk/: __init__.py  agentic.py  client.py  exceptions.py  llm_service.py  models.py  protocol.py  remote.py  transport.py
agents/python_sdk/clove_sdk/mixins/: __init__.py  agents.py  audit.py  events.py  filesystem.py  ipc.py  metrics.py  recording.py  state.py  tunnel.py  world.py
benchmarks/: README.md  __init__.py  config.py  metrics.py  report.py  run_benchmark.py
cli/: README.md  __init__.py  agentos.py  config.py  relay_api.py  requirements.txt  setup.py
demo/: .gitignore  PLAN.md
demos/: .gitignore  README.md  crash_isolation_demo.py
docs/: architecture.md  browser_extension_plan.md  getting-started.md  hot-reload.md  syscalls.md  world-simulation.md
relay/: __init__.py  api.py  auth.py  fleet.py  relay_server.py  requirements.txt  router.py  tokens.py
scripts/: run_dashboard.sh  tunnel_client.py
src/: main.cpp
test_suite/: 01_basic_llm.py  01_connection.py  02_file_operations.py  03_llm_query.py  04_ipc.py  05_shell_exec.py  07_http_request.py  08_permissions.py  09_events.py  10_state_store.py  11_metrics.py  15_async.py  README.md  run_all.py
(+287 files in other folders)
